fix close button position on mobile-version

--- a/style/gradeAssignments.css
+++ b/style/gradeAssignments.css
@@ -165,4 +165,9 @@ h3{
   .assignmentsList{
     width: 94%;
   }
+  .fill>button{
+    position: absolute;
+    top: 109px;
+    right: 9px;
+  }
 }
